# sqnc-node

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  Upgrade.md  docker-compose.yaml  dscp-node-3.0.0.tgz  dscp-node-3.0.1.tgz  dscp-node-3.2.0.tgz  dscp-node-3.3.0.tgz  dscp-node-3.3.1.tgz  dscp-node-3.4.0.tgz  dscp-node-3.5.0.tgz  dscp-node-3.6.0.tgz  dscp-node-3.7.0.tgz  dscp-node-3.8.0.tgz  dscp-node-4.0.0.tgz  dscp-node-4.1.0.tgz  dscp-node-4.2.0.tgz  dscp-node-4.2.1.tgz  dscp-node-4.2.2.tgz  dscp-node-4.3.1.tgz  dscp-node-4.4.0.tgz  dscp-node-4.4.1.tgz  dscp-node-4.4.2.tgz  dscp-node-4.4.3.tgz  dscp-node-4.4.4.tgz  dscp-node-4.4.5.tgz  dscp-node-4.4.6.tgz  dscp-node-4.4.7.tgz  dscp-node-4.4.8.tgz  dscp-node-4.5.0.tgz  dscp-node-4.5.1.tgz  dscp-node-4.5.2.tgz  governance.md  index.yaml  (+13 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: check-and-test.yml  check-and-test.yml.disabled  check-test.yml  check-types-package.yml  check-vitalam-node-api.yml  check-vitalam-node.yml  cross.yml  cross.yml.disabled  release-helm.yml  release-types-package.yml  release-vitalam-node.yml  release.yml  release.yml.disabled  test-types.yml  types-package.yml
.maintain/: frame-weight-template.hbs
api/: .eslintrc  .npmignore  README.md  package-lock.json  package.json  test.md
api/lib/: api.js  index.js
api/test/: mocharc.js
api/test/helper/: routes.js
api/test/integration/: types.test.js
docker/: cross.dockerfile
dscp-node/: README.md  package-lock.json  package.json  test.md
dscp-node/lib/: api.js  logger.js
dscp-node/src/: env.js  index.js
dscp-node/test/: test.env
dscp-node/test/helper/: api.js  logger.js  routes.js
dscp-node/test/integration/: types.test.js
helm/dscp-node/: Chart.yaml  README.md  values.yaml
helm/dscp-node/ci/: ct-values.yaml
helm/dscp-node/templates/: _helpers.tpl  customNodeKeySecret.yaml  service.yaml  serviceAccount.yaml  statefulset.yaml
helm/vitalam-node/: Chart.yaml  README.md  values.yaml
helm/vitalam-node/ci/: ct-values.yaml
helm/vitalam-node/templates/: _helpers.tpl  customNodeKeySecret.yaml  ingress.yaml  service.yaml  serviceAccount.yaml  serviceMonitor.yaml  statefulset.yaml
node/: Cargo.toml
node/res/: dscp-stage.json  dscp.json  inteli-stage.json  l3-sqnc.json  prod-l3-azure.json  vitalam.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs  test_service.rs
node/src/rpc/: mod.rs  sqnc.rs
node/src/service/: manual_seal.rs  mod.rs  observable_block_import.rs  proposal_finality.rs
pallets/doas/: Cargo.toml  README.md
pallets/doas/src/: lib.rs  mock.rs  tests.rs
pallets/ipfs-key/: Cargo.toml
pallets/ipfs-key/src/: lib.rs
pallets/organisation-data/: Cargo.toml
pallets/organisation-data/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/process-validation/: Cargo.toml  README.md
pallets/process-validation/src/: benchmarking.rs  binary_expression_tree.rs  lib.rs  migration.rs  restrictions.rs  tests.rs  weights.rs
pallets/process-validation/src/tests/: create_process.rs  disable_process.rs  genesis.rs  restriction_process.rs  validate_process.rs
pallets/simple-nft/: Cargo.toml
pallets/simple-nft/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  output.rs  tests.rs  token.rs  weights.rs
pallets/symmetric-key/: Cargo.toml  README.md
pallets/symmetric-key/src/: benchmarking.rs  lib.rs  migrations.rs  tests.rs  weights.rs
pallets/symmetric-key/src/tests/: rotate_key.rs  schedule.rs  update_key.rs
pallets/traits/: Cargo.toml
pallets/traits/src/: lib.rs
pallets/transaction-payment/: Cargo.toml  README.md
pallets/transaction-payment-free/: Cargo.toml  README.md
pallets/transaction-payment-free/src/: lib.rs  mock.rs  payment.rs  tests.rs  weights.rs
pallets/transaction-payment/src/: lib.rs  mock.rs  payment.rs  tests.rs
pallets/utxo-nft/: Cargo.toml
pallets/utxo-nft/src/: benchmarking.rs  graveyard.rs  input.rs  lib.rs  migration.rs  mock.rs  output.rs  tests.rs  token.rs  weights.rs
pallets/utxo-nft/src/tests/: delete_token.rs  mock.rs  mod.rs  run_process.rs  run_process_as_root.rs
pallets/validator-set/: Cargo.toml  README.md
pallets/validator-set/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  types.rs  utils.rs
runtime/src/constants/: mod.rs  time.rs  weights.rs
runtime/src/weights/: frame_benchmarking.rs  frame_system.rs  impl_traits.rs  mod.rs  pallet_babe.rs  pallet_balances.rs  pallet_collective.rs  pallet_grandpa.rs  pallet_membership.rs  pallet_organisation_data.rs  pallet_preimage.rs  pallet_process_validation.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_sudo.rs  pallet_symmetric_key.rs  pallet_timestamp.rs  pallet_utxo_nft.rs
runtime/types/: Cargo.toml
runtime/types/src/: lib.rs
scripts/: check-helm-version.sh  check-package-version.sh  check-version.sh  check-vitalam-node-version.sh  init.sh  start-node-docker.sh
tools/lang/: Cargo.toml  README.md
tools/lang/examples/: demo.dscp  l3.dscp
tools/lang/src/: cli.rs  compiler.rs  convert.rs  dscp.pest  errors.rs  lib.rs  main.rs  parser.rs  sqnc.pest
tools/lang/src/ast/: errors.rs  mod.rs  nodes.rs  parse.rs  types.rs
tools/lang/src/compiler/: condition_transform.rs  constants.rs  flatten.rs  helper.rs  mod.rs  parse.rs  token_transform.rs
vitalam-node/: .gitignore  README.md  package-lock.json  package.json
vitalam-node-api/: README.md  package-lock.json  package.json
vitalam-node-api/src/: env.js  index.js  logger.js
vitalam-node/scripts/: check-version.sh
vitalam-node/src/: env.js  index.js
vitalam-node/test/helper/: api.js
vitalam-node/test/integration/: types.test.js
