[workspace]
members = ['node', 'pallets/*', 'runtime', 'runtime/types', 'tools/*']
resolver = "2"

[workspace.package]
edition = "2021"
version = "12.2.1"

[workspace.dependencies]
##############################
# non-substrate dependencies #
##############################
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
clap = { version = "4.5.31", features = ["derive"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
bs58 = "0.5.1"
async-trait = "0.1.87"
hex-literal = "0.4.1"
exitcode = "1.1.2"
lazy_static = "1.5.0"
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2.0.12"
strum = { version = "0.27.1", default-features = false }
strum_macros = { version = "0.27.1", default-features = false }
log = { version = "0.4.26", default-features = false }
tokio = { version = "1.44.0", default-features = true }

#################################################################
# substrate linked dependencies in crates.io that may be pinned #
#################################################################
jsonrpsee = { version = "0.24.3" }
scale-info = { version = "2.11.6", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false }

###################################
# substrate dependencies #
###################################

# Runtime component dependencies
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-benchmarking = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
pallet-scheduler = { version = "39.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-babe = { version = "38.0.0", default-features = false }
pallet-grandpa = { version = "38.0.0", default-features = false }
pallet-proxy = { version = "38.0.0", default-features = false }
pallet-session = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-consensus-babe = { version = "0.40.0", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-staking = { version = "36.0.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-statement-store = { version = "18.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-collective = { version = "38.0.0", default-features = false }
pallet-membership = { version = "38.0.0", default-features = false }
pallet-node-authorization = { version = "38.0.0", default-features = false }
pallet-preimage = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }

# node dependencies
sc-cli = { version = "0.47.0" }
sc-executor = { version = "0.40.1" }
sc-service = { version = "0.46.0" }
sc-telemetry = { version = "25.0.0" }
sc-keystore = { version = "33.0.0" }
sc-network = { version = "0.45.3" }
sc-network-sync = { version = "0.44.1" }
sc-transaction-pool = { version = "37.0.0" }
sc-transaction-pool-api = { version = "37.0.0" }
sc-offchain = { version = "40.0.0" }
sc-consensus-manual-seal = { version = "0.46.0" }
sc-consensus-babe = { version = "0.45.0" }
sc-consensus-babe-rpc = { version = "0.45.0" }
sp-consensus = { version = "0.40.0" }
sc-consensus = { version = "0.44.0" }
sc-consensus-grandpa = { version = "0.30.0" }
sc-client-api = { version = "37.0.0" }
sp-timestamp = { version = "34.0.0" }
sp-keyring = { version = "39.0.0" }
sp-keystore = { version = "0.40.0" }
sc-rpc = { version = "40.0.0" }
sc-rpc-api = { version = "0.44.0" }
sp-blockchain = { version = "37.0.1" }
sc-basic-authorship = { version = "0.45.0" }
sc-utils = { version = "17.0.0" }
substrate-frame-rpc-system = { version = "39.0.0" }
frame-benchmarking-cli = { version = "43.0.0" }

# build dependencies
substrate-wasm-builder = { version = "24.0.1" }
substrate-build-script-utils = { version = "11.0.0" }

[profile.release]
panic = 'unwind'

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
